# silksurf

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  BrowserLoader.old  BrowserLoader.tla  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSS_INVALID_INVESTIGATION.md  Cargo.toml  DOCUMENTATION-INDEX.md  LICENSE-APACHE  LICENSE-MIT  MODERN_CSS_ENGINE_DESIGN.md  Makefile  PHASE-2-SELECTOR-MATCHING-PLAN.md  PHASE-2-STATUS.md  PHASE-3-5-MILESTONES.md  PHASE-3-SCOPE-AND-READINESS.md  README.md  SECURITY.md  WEEK-1-PLAN.md  deny.toml  gemini.md  generate_diffs.sh  lsan.supp  rust-toolchain.toml
.cargo/: config.toml
crates/silksurf-app/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-app/src/: accessibility.rs  app_options.rs  argb_raster.rs  browser_types.rs  dom_hit_test.rs  engine_process.rs  input.rs  js_events.rs  main.rs  page_build.rs  page_resources.rs  profile.rs  redraw_geometry.rs  runtime_repaint.rs  test_support.rs  window_frame.rs
crates/silksurf-app/tests/: app_basics.rs  native_engine_process.rs
crates/silksurf-core/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-core/benches/: bpe.rs  interner.rs
crates/silksurf-core/src/: arena.rs  bpe.rs  error.rs  interner.rs  lib.rs  psl.rs  span.rs  testing.rs
crates/silksurf-core/tests/: core.rs  core_basics.rs  engine_protocol.rs
crates/silksurf-css/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-css/src/: calc.rs  cascade_view.rs  custom_properties.rs  lib.rs  matching.rs  media.rs  parser.rs  property_id.rs  selector.rs  style.rs  style_soa.rs
crates/silksurf-css/tests/: cascade.rs  css_harness.rs  matching.rs  parser.rs  selectors.rs  tokenizer.rs
crates/silksurf-engine/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-engine/conformance/: h2spec-scorecard.json  wpt-scorecard.json
crates/silksurf-engine/src/: fused_pipeline.rs  js.rs  lib.rs  privacy.rs  sandbox.rs  speculative.rs
crates/silksurf-engine/tests/: js.rs  parse_html.rs  pipeline.rs
crates/silksurf-gui/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-gui/src/: event_loop.rs  input.rs  lib.rs  wayland_shm.rs  window.rs  winit_backend.rs
crates/silksurf-gui/tests/: gui_basics.rs
crates/silksurf-layout/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-layout/src/: dimensions_soa.rs  flex.rs  lib.rs  neighbor_table.rs  taffy_layout.rs
crates/silksurf-layout/tests/: dimensions_soa.rs  layout.rs  typography.rs
crates/silksurf-net/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-net/src/: cache.rs  cookie.rs  h2_client.rs  lib.rs  sse.rs  websocket.rs  websocket_session.rs
crates/silksurf-net/tests/: client.rs  cookie_roundtrip.rs  idn.rs
crates/silksurf-render/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-render/src/: display_list_batched.rs  lib.rs
crates/silksurf-render/tests/: batched.rs  color.rs  determinism.rs  render.rs  skia.rs
crates/silksurf-tls/: Cargo.toml  OPERATIONS.md  README.md
crates/silksurf-tls/src/: lib.rs
crates/silksurf-tls/tests/: loader_sanity.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/: README.md
fuzz/corpus/css_parser/: 02_multi_decl.css  03_at_rule.css  04_at_rule_query.css  05_compound.css  06_combinator_chain.css  07_adjacent.css  08_subseq.css  09_not.css  10_keyframes.css  11_flex.css  12_gradient.css  13_transform.css  14_custom_props.css  15_supports.css  16_font_face.css  17_important.css
fuzz/corpus/css_tokenizer/: 04_class.css  05_id.css  06_combinator.css  07_list.css  08_attr_selector.css  09_attr_value.css  10_pseudo_class.css  11_pseudo_element.css  13_at_media.css  14_hex_color.css  15_function.css  16_calc.css  17_import.css  18_string_escape.css
fuzz/corpus/html_tokenizer/: 05_attr.html  06_unquoted_attr.html  12_entities.html  13_script_special.html  14_style_special.html  15_complex_tag.html  17_invalid_utf8_in_attr.html  18_self_close_then_end.html
fuzz/corpus/html_tree_builder/: 02_with_content.html  03_unclosed_p.html  04_implicit_close_p.html  05_table.html  06_implicit_close_li.html  07_nested_a.html  08_void_elements.html  09_deep_nesting.html  10_bold_italic.html  11_head_then_body.html  14_text_after_body.html  15_svg.html  17_template.html
fuzz/corpus/js_runtime/: 06_function.js  09_object.js  11_for.js  14_float.js  16_undef.js  17_class.js  18_template.js  20_generator.js
fuzz/fuzz_targets/: css_parser.rs  css_tokenizer.rs  html_tokenizer.rs  html_tree_builder.rs  js_runtime.rs
silksurf-js/: Cargo.toml  OPERATIONS.md  README.md  SILKSURF-JS-ARCHITECTURE.md  TEST262_BASELINE.md  cbindgen.toml  clippy.toml  deny.toml  heaptrack.parser_profile.1798871.zst  rustfmt.toml
silksurf-js/.cargo/: config.toml
silksurf-js/benches/: interner.rs  lexer_throughput.rs  vm_throughput.rs
silksurf-js/conformance/: test262-boa-scorecard.json  test262-scorecard.json
silksurf-js/docs/: DEPENDENCY_AUDIT.md  DEPENDENCY_GUIDE.md  SYNERGY_ANALYSIS.md
silksurf-js/examples/: parser_bench.rs  parser_profile.rs
silksurf-js/include/: silksurf.h
silksurf-js/probes/: react_counter_click.js
silksurf-js/scripts/: build-optimized.sh
silksurf-js/src/: ffi.rs  lib.rs  napi.rs  tracing_support.rs  verification.rs  wasm.rs
silksurf-js/src/boa_backend/: css_object.rs  dom_bridge.rs  event_dispatch.rs  mod.rs  net_queue.rs
silksurf-js/src/bytecode/: chunk.rs  compiler.rs  instruction.rs  mod.rs  opcode.rs
silksurf-js/src/gc/: arena.rs  generation.rs  heap.rs  mod.rs  trace.rs  weakref.rs
silksurf-js/src/jit/: code_cache.rs  compiler.rs  ir_builder.rs  mod.rs
silksurf-js/src/lexer/: bpe.rs  interner.rs  lexer.rs  mod.rs  span.rs  token.rs
silksurf-js/src/parser/: ast.rs  ast_arena.rs  error.rs  mod.rs  parser.rs  precedence.rs
silksurf-js/src/vm/: event_loop.rs  gc_integration.rs  generator.rs  host.rs  ic.rs  jit_integration.rs  mod.rs  nanbox.rs  promise.rs  shape.rs  snapshot.rs  string.rs  timers.rs  value.rs
silksurf-js/tests/: async_done.rs  canvas.rs  fetch_async.rs  host_timers.rs  xhr.rs
silksurf-js/tests/test262/: harness.rs  host.rs  metadata.rs  mod.rs
src/: main.c  (+3 more)
(+647 files in other folders)
