[workspace]
members = [
  "silksurf-js",
  "crates/silksurf-app",
  "crates/silksurf-engine",
  "crates/silksurf-core",
  "crates/silksurf-html",
  "crates/silksurf-css",
  "crates/silksurf-dom",
  "crates/silksurf-layout",
  "crates/silksurf-render",
  "crates/silksurf-gui",
  "crates/silksurf-net",
  "crates/silksurf-tls",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.96.0"

[workspace.dependencies]
bumpalo = { version = "3.20", features = ["collections"] }
lasso = "0.7"
memchr = "2.8"
rayon = "1.11"
rustc-hash = "2.1"
smallvec = { version = "1.15", features = ["union", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
smol_str = { version = "0.3", features = ["serde"] }
mimalloc = { version = "0.1", default-features = false }
url = "2.5"
rustls = "0.23"
tokio = { version = "1", features = ["rt", "io-util", "net", "time"] }
tokio-rustls = "0.26"
h2 = "0.4"
bytes = "1"
http = "1"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "dev"
debug-assertions = true
overflow-checks = true

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.release-safe]
inherits = "release"
overflow-checks = true
debug-assertions = false

[profile.release-bolt]
inherits = "release"
strip = false
debug = 1

[profile.release-profiling]
inherits = "release"
debug = true
strip = false

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false

[profile.miri]
inherits = "dev"
opt-level = 0
debug = true

[profile.release-riced]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
debug = 1
strip = "none"
