[workspace]
members = [
  "silksurf-js",
  "crates/silksurf-app",
  "crates/silksurf-engine",
  "crates/silksurf-core",
  "crates/silksurf-html",
  "crates/silksurf-css",
  "crates/silksurf-dom",
  "crates/silksurf-layout",
  "crates/silksurf-render",
  "crates/silksurf-gui",
  "crates/silksurf-net",
  "crates/silksurf-tls",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
# MSRV pinned to current stable. Bump in lockstep with rust-toolchain.toml.
# Edition 2024 stabilized in Rust 1.85; any 1.85+ stable can build the
# workspace. See docs/design/ARCHITECTURE-DECISIONS.md ADR-008.
rust-version = "1.94.1"

[workspace.dependencies]
bumpalo = { version = "3.20", features = ["collections"] }
lasso = "0.7"
memchr = "2.8"
rayon = "1.11"
rustc-hash = "2.1"
smallvec = { version = "1.15", features = ["union", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
smol_str = { version = "0.3", features = ["serde"] }
mimalloc = { version = "0.1", default-features = false }
# Structured logging. Workspace-wide adoption is opt-in via the
# "tracing" feature on each crate that emits spans (currently only
# silksurf-js; expansion to silksurf-engine is queued in the
# observability roadmap stream).
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
rustls = "0.23"
tokio = { version = "1", features = ["rt", "io-util", "net", "time"] }
tokio-rustls = "0.26"
h2 = "0.4"
bytes = "1"
http = "1"
hickory-resolver = { version = "0.26.0-beta.3", features = ["dnssec-ring", "tokio"] }
hickory-proto = { version = "0.26.0-beta.3", features = ["dnssec-ring"] }
# UAX #9 and UAX #14 support (AD-023). unicode-segmentation is the
# existing peer; bidi and linebreak complete the minimal i18n triad.
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
# WHATWG-conformant HTML parser (Servo lineage, html5lib test suite).
# Used by silksurf-html TreeSink adapter to replace the hand-written tokenizer.
html5ever = "0.38"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2

[profile.test]
inherits = "dev"
debug-assertions = true
overflow-checks = true

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.release-safe]
inherits = "release"
overflow-checks = true
debug-assertions = false

[profile.release-bolt]
inherits = "release"
strip = false
debug = 1

[profile.release-profiling]
inherits = "release"
debug = true
strip = false

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false

[profile.miri]
inherits = "dev"
opt-level = 0
debug = true

[profile.release-riced]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
debug = 1
strip = "none"

# ---------------------------------------------------------------------------
# Release infrastructure (P9.S1).
#
# WHY: We package release artifacts entirely on the developer workstation
#      (strict-local-only CI per ADR-009). cargo-dist is the canonical
#      packaging tool; configuring it here lets `dist build` produce
#      reproducible tarballs for the supported targets without any cloud
#      orchestration.
# WHAT: workspace-level cargo-dist config. `ci = []` and the absence of any
#      `pr-run-mode` keep all builds purely local. `installers = []` means
#      we do not ship shell-installer or PowerShell-installer wrappers --
#      only raw binary tarballs. The two targets cover developer laptops
#      (x86_64) and the ARM SBC fleet used by the perf lab (aarch64).
# HOW: `dist build` to materialise artifacts into `target/distrib/`,
#      `dist plan` to dry-run, `dist manifest` to introspect the planned
#      release. The release script (scripts/release.sh) wraps the gate.
#
# Note on the original P9 spec: an earlier draft listed `builds-locals = true`
# as a desired key. cargo-dist 0.31 has no such key; the canonical way to
# express "build everything locally, no CI" is the combination
# `ci = []` + `local-artifacts-jobs = []`. That is what we do here.
# ---------------------------------------------------------------------------
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = []
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
installers = []
local-artifacts-jobs = []
# Tarball binaries only (no .deb / .rpm / .msi). The gzip tarball variant
# is the most portable and is what the perf-lab provisioning scripts expect.
unix-archive = ".tar.gz"
windows-archive = ".tar.gz"
# Toolchain pinning lives in rust-toolchain.toml (1.94.1). cargo-dist used
# to accept a `rust-toolchain-version` key but deprecated it in 0.27 in
# favour of letting rustup honour rust-toolchain.toml -- which is what we
# already do. Reproducible-build verification still depends on the rest
# of the workspace agreeing on the same toolchain; see
# docs/development/REPRODUCIBLE-BUILD.md.
